移植蓝图材料服务实现到 1.12.2